@@ -25,7 +25,7 @@ public class Day2 {
     for (int noun = 0; noun < 100; noun++) {
       for (int verb = 0; verb < 100; verb++) {
         intCodeComputer.initMemory(noun, verb);
-        Integer code = intCodeComputer.run().get(0);
+        Integer code = intCodeComputer.run().getFirst();
         if (code == result) {
           return List.of(noun, verb);
         }
